[tool.poetry]
name = "kerastuner-tensorboard-logger"
version = "0.1.0"
description = ""
authors = ["tokusumi <tksmtoms@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokusumi/kerastuner-tensorboard-logger"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.3.0"
keras-tuner = "^1.0.1"
tensorboard = "^2.3.0"
setuptools = "^41.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
flake8 = "^3.8.3"
black = "^20.8b1"
mypy = "^0.782"
tensorflow-datasets = "^3.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
