[tool.poetry]
name = "kerastuner-tensorboard-logger"
version = "0.2.2"
description = "Simple integration of keras-tuner (hyperparameter tuning) and tensorboard dashboard (interactive visualization)."
authors = ["tokusumi <tksmtoms@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokusumi/kerastuner-tensorboard-logger"
include = [
    "LICENSE",
]
keywords = ["tensorflow2", "keras-tuner", "tensorboard"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.0"
keras-tuner = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
flake8 = "^3.8.3"
black = "^20.8b1"
mypy = "^0.782"
tensorflow-datasets = "^3.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
